--- a/package.json
+++ b/package.json
@@ -24,8 +24,10 @@
   },
   "homepage": "https://github.com/bnoon1990/ne-price-by-quantity-for-woo-commerce#readme",
   "devDependencies": {
-    "gulp": "^4.0.0",
+    "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
-    "gulp-concat": "^2.6.1"
+    "gulp-concat": "^2.6.1",
+    "gulp-uglify": "^3.0.2",
+    "gulp-watch": "^5.0.1"
   }
 }
