--- a/composer.json
+++ b/composer.json
@@ -17,5 +17,12 @@
     }
   ],
   "minimum-stability": "stable",
-  "require": {}
+  "config": {
+    "allow-plugins": {
+      "dealerdirect/phpcodesniffer-composer-installer": true
+    }
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9"
+  }
 }
