Changed gulp to store source file minified assets in assets directory and main php file to enque these from updated location. Updated composer autoload classess to use new src directory.

--- a/composer.json
+++ b/composer.json
@@ -5,9 +5,9 @@
   "license": "GPL-2.0-or-later",
   "autoload": {
     "psr-4": {
-      "Noonelite\\NePriceByQuantityForWoocommerce\\Admin\\": "admin/",
-      "Noonelite\\NePriceByQuantityForWoocommerce\\Frontend\\": "frontend/",
-      "Noonelite\\NePriceByQuantityForWoocommerce\\Includes\\": "includes/"
+      "Noonelite\\NePriceByQuantityForWoocommerce\\Admin\\": "src/admin/",
+      "Noonelite\\NePriceByQuantityForWoocommerce\\Frontend\\": "src/frontend/",
+      "Noonelite\\NePriceByQuantityForWoocommerce\\Includes\\": "src/includes/"
     }
   },
   "authors": [
