--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "gulp-clean-css": "^4.3.0",
     "gulp-concat": "^2.6.1",
     "gulp-uglify": "^3.0.2",
-    "gulp-watch": "^5.0.1"
+    "gulp-watch": "^5.0.1",
+    "gulp-zip": "^6.0.0"
   }
 }
