--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "gulp-clean-css": "^4.3.0",
     "gulp-composer": "^0.4.5",
     "gulp-concat": "^2.6.1",
+    "gulp-debug": "^5.0.1",
     "gulp-json-editor": "^2.6.0",
     "gulp-uglify": "^3.0.2",
     "gulp-watch": "^5.0.1",
